# sagittarius-soap

./: CMakeLists.txt  ChangeLog  README.md  example.scm  test.scm
soap/: lite.scm
soap/transport/: http.scm
